name:                indexed-set
version:             0.1.0.0
synopsis:            Cardinality-Indexed Sets
description:         See README.rst
homepage:            https://github.com/githubuser/indexed-set#readme
license:             LGPL-3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2017 Paul Ogris
category:            Data
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Set.Indexed
  build-depends:       base >= 4.7 && < 5, containers, deepseq
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsahyt/indexed-set
